--- a/styles/lessons.css
+++ b/styles/lessons.css
@@ -14,7 +14,7 @@
     }
     h2{
         font-size: 30px;
-        margin-top: 80px;
+        margin-top: 40px;
     }
 
     .lessons{
@@ -92,6 +92,9 @@ h2{
     text-align: center;
 }
 
+#navbar{
+    position: static;
+}
 
 .lessons{
     font-family: 'Roboto', sans-serif;
