--- a/styles/offthecourse.css
+++ b/styles/offthecourse.css
@@ -7,3 +7,7 @@ body{
     background-color: #3f3f3f;
     margin: 0;
 }
+
+#navbar{
+    position: static;
+}
