--- a/styles/road.css
+++ b/styles/road.css
@@ -44,8 +44,8 @@
 }
 
 .bottom{
-    background-size: 75%;
-    background-position: bottom right;
+    background-size: 100%;
+    /* background-position: bottom right; */
 }
 
 .bottom-content{
@@ -69,6 +69,7 @@
 
 .contact-bottom-words{
     margin-left: 70px;
+    margin-top: 92px;
 }
 
 
